[gd_scene load_steps=10 format=3 uid="uid://dj53yebvgwrxt"]

[ext_resource type="Script" path="res://code/ui_elements/btn_menu.gd" id="1_h8xfs"]
[ext_resource type="Shader" path="res://art/shaders/blur.gdshader" id="1_sy7ed"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_efa31"]
shader = ExtResource("1_sy7ed")
shader_parameter/lod = 1.6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qq85b"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.380392, 0.396078, 0.490196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_taeqc"]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.592157, 0.619608, 0.74902, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3r0yi"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.807843, 0.317647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7gmxp"]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.866667, 0.772549, 0.537255, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3j7io"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.38, 0.4, 0.49, 0.2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7auu8"]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.59, 0.62, 0.75, 0.2)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="BtnSelect" type="Button"]
custom_minimum_size = Vector2(0, 64)
offset_right = 246.0
offset_bottom = 64.0
text = "GAME"
alignment = 0
script = ExtResource("1_h8xfs")

[node name="Panel" type="Panel" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_efa31")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="InnerStroke" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_qq85b")

[node name="OuterStroke" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_taeqc")

[node name="InnerStrokeFocus" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_3r0yi")

[node name="OuterStrokeFocus" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_7gmxp")

[node name="InnerStrokeDis" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_3j7io")

[node name="OuterStrokeDis" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_7auu8")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
